# network-duplication-detection

./: CMakeLists.txt  README.md  main.cpp  test_helpers.cmake
counters/: CMakeLists.txt
counters/__tests__/basic_tests/: counter_basic_tests.cpp
counters/__tests__/edge_tests/: counter_edge_tests.cpp
data/: network_utf8.csv  original_network.csv
src/: CMakeLists.txt  NetworkRecord.hpp  main.cpp  solution.cpp  solution.hpp  test_helpers.cmake
src/DuplicationDetection/: CMakeLists.txt  DuplicationDetector.cpp  DuplicationDetector.hpp  SegmentMerger.cpp  SegmentMerger.hpp
src/DuplicationDetection/LocationBased/SegmentGroup/: SegmentGroup.cpp  SegmentGroup.hpp  SegmentGroupFactory.cpp  SegmentGroupFactory.hpp
src/DuplicationDetection/LocationBased/SegmentGroup/__tests__/: SegmentGroupFactory_mock.hpp  SegmentGroupFactory_tests.cpp  SegmentGroup_mock.hpp  SegmentGroup_tests.cpp
src/DuplicationDetection/LocationBased/UniqueList/: UniqueList.cpp  UniqueList.hpp  UniqueListFactory.cpp  UniqueListFactory.hpp
src/DuplicationDetection/LocationBased/UniqueList/__tests__/: UniqueListFactory_mock.hpp  UniqueListFactory_tests.cpp  UniqueList_basic_tests.cpp  UniqueList_begin_tests.cpp  UniqueList_end_tests.cpp  UniqueList_middle_tests.cpp  UniqueList_mock.hpp  UniqueList_tests.cpp  UniqueList_tests_helper.hpp
src/DuplicationDetection/__tests__/: DuplicationDetector_tests.cpp  SegmentMerger_tests.cpp
src/Reader/: CMakeLists.txt  StreamReader.cpp  StreamReader.hpp
src/Reader/CellParser/: CellParser.cpp  CellParser.hpp
src/Reader/CellParser/__tests__/: CellParser_tests.cpp
src/Reader/LineParser/: LineParser.cpp  LineParser.hpp
src/Reader/LineParser/__tests__/: LineParser_tests.cpp
src/Reader/__tests__/: StreamReader_tests.cpp
src/Segment/: CMakeLists.txt  NetworkSegment.cpp  NetworkSegment.hpp  SegmentMapper.cpp  SegmentMapper.hpp
src/Segment/__tests__/: NetworkSegment_tests.cpp  SegmentMapper_tests.cpp  TestSegment.cpp  TestSegment.hpp
src/__tests__/: solution_e2e_tests.cpp
src/counters/: CMakeLists.txt  counter.cpp  counter.hpp
src/utils/: CMakeLists.txt  TypeName.hpp
src/utils/__tests__/: TypeName_tests.cpp
utils/: TypeName.hpp
